fix getDAI :: DO/SDO/SDO/../DA/BDA/BDA.. from DataTypeTemplate and LNs